A2/group7/log
In file included from semantics.hpp:1:0,
                 from parser.y:5:
ast.hpp: In member function ‘virtual int Name_Expr::infer_type(SymTab*)’:
ast.hpp:62:37: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("variable not declared\n");
                                     ^
ast.hpp: In member function ‘virtual int Binary_Expr::infer_type(SymTab*)’:
ast.hpp:119:65: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
     yyerror("Not supported operand type for binary expression\n");
                                                                 ^
ast.hpp:125:28: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   yyerror("Type Mismatch\n");
                            ^
ast.hpp: In member function ‘virtual int Boolean_Expr::infer_type(SymTab*)’:
ast.hpp:196:65: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
     yyerror("Not supported operand type for binary expression\n");
                                                                 ^
ast.hpp:202:28: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   yyerror("Type Mismatch\n");
                            ^
ast.hpp: In member function ‘virtual int Relational_Expr::infer_type(SymTab*)’:
ast.hpp:224:65: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
     yyerror("Not supported operand type for binary expression\n");
                                                                 ^
ast.hpp:230:28: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   yyerror("Type Mismatch\n");
                            ^
ast.hpp: In member function ‘virtual int UMinus_Expr::infer_type(SymTab*)’:
ast.hpp:259:64: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Not supported operand type for uminus expression\n");
                                                                ^
ast.hpp: In member function ‘virtual int Not_Expr::infer_type(SymTab*)’:
ast.hpp:286:64: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Not supported operand type for uminus expression\n");
                                                                ^
ast.hpp: In member function ‘virtual int Conditional_Expr::infer_type(SymTab*)’:
ast.hpp:322:54: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("First expression in ?: must be boolean\n");
                                                      ^
ast.hpp:327:71: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Expressions on both sides of COLON must be of same type\n");
                                                                       ^
ast.hpp: In member function ‘virtual int Assignment_Stmt::infer_type(SymTab*)’:
ast.hpp:362:29: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Type mismatch\n");
                             ^
ast.hpp: In member function ‘virtual int Read_Stmt::infer_type(SymTab*)’:
ast.hpp:383:27: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Can't read \n");
                           ^
ast.hpp: In member function ‘virtual int Write_Stmt::infer_type(SymTab*)’:
ast.hpp:406:28: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Can't Print \n");
                            ^
ast.hpp: In member function ‘virtual int Stmtlist::infer_type(SymTab*)’:
ast.hpp:426:27: error: ‘Local_Symtab’ was not declared in this scope
             i->infer_type(Local_Symtab);
                           ^
parser.y: In function ‘int yyparse()’:
parser.y:74:77: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
                 yyerror("Variable declared more than once in the same scope");
                                                                             ^
parser.y:120:64: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
    yyerror("Variable declared more than once in the same scope");
                                                                ^
parser.y:157:65: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
     yyerror("Variable declared more than once in the same scope");
                                                                 ^
parser.y:192:77: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
                 yyerror("Variable declared more than once in the same scope");
                                                                             ^
parser.y:206:53: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
             yyerror("Variable type cannot be void\n");
                                                     ^
parser.y:212:79: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
                 yyerror("Variable declared more than once in the same scope\n");
                                                                               ^
y.tab.c:1975:35: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
       yyerror (YY_("syntax error"));
                                   ^
y.tab.c:2119:35: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
   yyerror (YY_("memory exhausted"));
                                   ^
make: *** [y.tab.h] Error 1
